--- a/client/index.html
+++ b/client/index.html
@@ -2,26 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>My test page</title>
-    <script>
-        var ws = new WebSocket("ws://localhost:5634/ws");
-
-        ws.onopen = function() {
-            ws.send("Hello from client!");
-        }
-
-        ws.onmessage = function(msg) {
-            alert(msg.data);
-        }
-
-        function send_message() {
-            ws.send(document.getElementById('message').value)
-        }
-    </script>
-  </head>
+    <title>Login</title>
+    <link rel="stylesheet" href="./formular.css">
+</head>
   <body>
-      <input type="text" id="message">
-      <button onclick="send_message()">Send message</button>
+      <div id="formular">
+          <h2>Login</h2>
+          <label>Username:</label>
+          <input id="user" type="text">
+          <label>Password:</label>
+          <input id="pass" type="password">
+          <button id="login"> Sign in </button>
+          <button id="create"> Sign up </button>
+      </div> 
+    <script src="./formular.js"></script>  
   </body>
 </html>
