Save user data in database

--- a/client/index.html
+++ b/client/index.html
@@ -8,8 +8,12 @@
   <body>
       <div id="formular">
           <h2>Login</h2>
-          <label>Username:</label>
-          <input id="user" type="text">
+          <label>Email:</label>
+          <input id="email" type="text">
+          <label>First Name:</label>
+          <input id="fst" type="text">
+          <label>Last Name:</label>
+          <input id="snd" type="text">
           <label>Password:</label>
           <input id="pass" type="password">
           <button id="login"> Sign in </button>
