Small modification to forms

--- a/client/index.html
+++ b/client/index.html
@@ -24,12 +24,10 @@
     
         <label for="pass">Password:</label>
         <input id="pass" name="pass" type="password">
-        
-        <div id="form-signup-wrapper">
-            <div id="form-signup-btn">
-                <button id="create">Sign in</button>
-                <button id="form-cancel-signin" style="background-color: rgb(250, 25, 0);">Cancel</button>
-            </div>
+
+        <div id="form-signin-btn">
+            <button id="logAcc">Sign in</button>
+            <button id="form-cancel-signin" style="background-color: rgb(250, 25, 0);">Cancel</button>
         </div>
     </div>
 
@@ -55,11 +53,9 @@
         <input id="cpass" name="cpass" type="password">
         <p id="cpass_validation">Passwords don't match</p>
 
-        <div id="form-signup-wrapper">
-            <div id="form-signup-btn">
-                <button id="create">Sign up</button>
-                <button id="form-cancel-signup" style="background-color: red;">Cancel</button>
-            </div>
+        <div id="form-signup-btn">
+            <button id="createAcc">Sign up</button>
+            <button id="form-cancel-signup" style="background-color: red;">Cancel</button>
         </div>
     </div>
     <script src="./signup.js"></script>
