--- a/client/index.html
+++ b/client/index.html
@@ -19,11 +19,11 @@
 
     <div id="formularSignIn">
         <h2>Sign in</h2>
-        <label for="email">Email:</label>
-        <input id="email" name="email" type="email">
+        <label for="emailLog">Email:</label>
+        <input id="emailLog" name="email" type="email">
     
-        <label for="pass">Password:</label>
-        <input id="pass" name="pass" type="password">
+        <label for="passLog">Password:</label>
+        <input id="passLog" name="pass" type="password">
 
         <div id="form-signin-btn">
             <button id="logAcc">Sign in</button>
@@ -58,7 +58,8 @@
             <button id="form-cancel-signup" style="background-color: red;">Cancel</button>
         </div>
     </div>
-    <script src="./signup.js"></script>
+    <script src="./signin.js" defer></script>
+    <script src="./signup.js" defer></script>
 </body>
 
 </html>
