Sign In and Sign Up finished

--- a/client/index.html
+++ b/client/index.html
@@ -9,12 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
     <title>Sign up</title>
     <link rel="stylesheet" href="formular.css">
+    <script src="connection.js" defer></script>
 </head>
 
 <body>
     <div id="navbar">
         <button id="signin">Sign In</button>
         <button id="signup">Sign Up</button>
+        <button id="log-out">Log out</button>
     </div>
 
     <div id="formularSignIn">
