--- a/client/index.html
+++ b/client/index.html
@@ -25,7 +25,46 @@
             <h2>Chat</h2>
         </div>
         <div class="conversation">
-            <div id="AllMessages"></div>
+            <div id="AllMessages">
+                <div class="message-others">Other's message</div>
+                <div class="message-mine">My message</div>
+                <div class="message-mine">My
+                    looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong message</div>
+                <div class="message-mine">My long long long long long long long long long long long long long long
+                    message</div>
+                <div class="message-others">Other's message</div>
+                <div class="message-others">Other's message</div>
+                <div class="message-others">Other's message</div>
+                <div class="message-others">Other's message</div>
+                <div class="message-others">Other's message</div>
+                <div class="message-others">Other's message</div>
+                <div class="message-others">Other's message</div>
+                <div class="message-others">Other's message</div>
+                <div class="message-others">Other's message</div>
+                <div class="message-others">Other's message</div>
+                <div class="message-others">Other's message</div>
+                <div class="message-others">Other's message</div>
+                <div class="message-others">Other's message</div>
+                <div class="message-others">Other's message</div>
+                <div class="message-mine">My message</div>
+                <div class="message-mine">My
+                    looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong message</div>
+                <div class="message-mine">My long long long long long long long long long long long long long long
+                    message</div>
+                <div class="message-others">Other's message</div>
+                <div class="message-others">Other's message</div>
+                <div class="message-others">Other's message</div>
+                <div class="message-others">Other's message</div>
+                <div class="message-others">Other's message</div>
+                <div class="message-others">Other's message</div>
+                <div class="message-others">Other's message</div>
+                <div class="message-others">Other's message</div>
+                <div class="message-others">Other's message</div>
+                <div class="message-others">Other's message</div>
+                <div class="message-others">Other's message</div>
+                <div class="message-others">Other's message</div>
+                <div class="message-others">Other's message</div>
+            </div>
             <div id="SendSection">
                 <input id="send-message" type="text">
                 <button id="btn-send">
