Implementing search users bar

--- a/client/index.html
+++ b/client/index.html
@@ -21,6 +21,8 @@
     </div>
 
     <div id="chat-body">
+        <input type="text" id="search-user">
+        <div id="show-users"></div>
         <div id="groups">
             <h2>Chat</h2>
         </div>
