Add another HTML page for showing the messages
Leave the `index.html` for signing in/out only

--- a/client/chat.html
+++ b/client/chat.html
@@ -11,27 +11,28 @@
 </head>
 
 <body>
-
     <main>
         <div id="left">
             <div id="contacts">
-                <button>Contact1</button>
-                <button>Contact2</button>
-                <button>Contact3</button>
             </div>
             <div id="menu">
                 <input type="text" name="s_group" id="s_group">
                 <div>
                     <b>YourName</b>
                     <button>
-                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 511.999 511.999" style="enable-background:new 0 0 511.999 511.999;" xml:space="preserve">
-                            <path d="M508.874,478.708L360.142,329.976c28.21-34.827,45.191-79.103,45.191-127.309c0-111.75-90.917-202.667-202.667-202.667    S0,90.917,0,202.667s90.917,202.667,202.667,202.667c48.206,0,92.482-16.982,127.309-45.191l148.732,148.732    c4.167,4.165,10.919,4.165,15.086,0l15.081-15.082C513.04,489.627,513.04,482.873,508.874,478.708z M202.667,362.667    c-88.229,0-160-71.771-160-160s71.771-160,160-160s160,71.771,160,160S290.896,362.667,202.667,362.667z"/>
+                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
+                            id="Capa_1" x="0px" y="0px" viewBox="0 0 511.999 511.999"
+                            style="enable-background:new 0 0 511.999 511.999;" xml:space="preserve">
+                            <path
+                                d="M508.874,478.708L360.142,329.976c28.21-34.827,45.191-79.103,45.191-127.309c0-111.75-90.917-202.667-202.667-202.667    S0,90.917,0,202.667s90.917,202.667,202.667,202.667c48.206,0,92.482-16.982,127.309-45.191l148.732,148.732    c4.167,4.165,10.919,4.165,15.086,0l15.081-15.082C513.04,489.627,513.04,482.873,508.874,478.708z M202.667,362.667    c-88.229,0-160-71.771-160-160s71.771-160,160-160s160,71.771,160,160S290.896,362.667,202.667,362.667z" />
                         </svg>
                     </button>
                     <button>
                         <svg xmlns="http://www.w3.org/2000/svg" height="512" viewBox="0 0 512 512">
-                            <path d="m480.971 239.029-90.51-90.509a24 24 0 0 0 -33.942 0 24 24 0 0 0 0 33.941l49.54 49.539h-262.059a24 24 0 0 0 -24 24 24 24 0 0 0 24 24h262.059l-49.54 49.539a24 24 0 0 0 33.942 33.941l90.51-90.51a24 24 0 0 0 0-33.941z"/>
-                            <path d="m304 392a24 24 0 0 0 -24 24v24h-208v-368h208v24a24 24 0 0 0 48 0v-32a40 40 0 0 0 -40-40h-224a40 40 0 0 0 -40 40v384a40 40 0 0 0 40 40h224a40 40 0 0 0 40-40v-32a24 24 0 0 0 -24-24z"/>
+                            <path
+                                d="m480.971 239.029-90.51-90.509a24 24 0 0 0 -33.942 0 24 24 0 0 0 0 33.941l49.54 49.539h-262.059a24 24 0 0 0 -24 24 24 24 0 0 0 24 24h262.059l-49.54 49.539a24 24 0 0 0 33.942 33.941l90.51-90.51a24 24 0 0 0 0-33.941z" />
+                            <path
+                                d="m304 392a24 24 0 0 0 -24 24v24h-208v-368h208v24a24 24 0 0 0 48 0v-32a40 40 0 0 0 -40-40h-224a40 40 0 0 0 -40 40v384a40 40 0 0 0 40 40h224a40 40 0 0 0 40-40v-32a24 24 0 0 0 -24-24z" />
                         </svg>
                     </button>
                 </div>
@@ -42,28 +43,13 @@
                 <b>Random Name</b>
             </div>
             <div id="messages">
-                <div class="message sent"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam molestiae, libero, asperiores odio commodi deleniti optio tempora sint similique quia nisi eaque totam quidem. Voluptates quaerat maiores voluptas mollitia molestiae!</p><i>8:15 AM</i></div>
-                <div class="message sent"><p>message2</p><i>8:15 AM</i></div>
-                <div class="message received"><b>Name</b><p>message3</p><i>8:15 AM</i></div>
-                <div class="message received"><p>message3</p><i>8:15 AM</i></div>
-                <div class="message received"><p>message3</p><i>8:15 AM</i></div>
-                <div class="message received"><p>message3</p><i>8:15 AM</i></div>
-                <div class="message received"><p>message3</p><i>8:15 AM</i></div>
-                <div class="message received"><p>message3</p><i>8:15 AM</i></div>
-                <div class="message received"><p>message3</p><i>8:15 AM</i></div>
-                <div class="message received"><p>message3</p><i>8:15 AM</i></div>
-                <div class="message received"><p>message3</p><i>8:15 AM</i></div>
-                <div class="message received"><p>message3</p><i>8:15 AM</i></div>
-                <div class="message received"><p>message3</p><i>8:15 AM</i></div>
-                <div class="message received"><p>message3</p><i>8:15 AM</i></div>
-                <div class="message received"><p>message3</p><i>8:15 AM</i></div>
-                <div class="message received"><p>message3</p><i>8:15 AM</i></div>
             </div>
             <div id="writeArea">
                 <input type="text" name="write" id="write">
                 <button id="btn-send">
                     <svg viewBox="0 0 16 16">
-                        <path d="M0,9l4,1.5L6,16l2.861-3.82L14,14l2-14L0,9z M7.169,11.44l-0.916,2.485l-1.086-3.118l8.402-7.631L7.169,11.44z" />
+                        <path
+                            d="M0,9l4,1.5L6,16l2.861-3.82L14,14l2-14L0,9z M7.169,11.44l-0.916,2.485l-1.086-3.118l8.402-7.631L7.169,11.44z" />
                     </svg>
                 </button>
             </div>
