--- a/client/index.html
+++ b/client/index.html
@@ -17,9 +17,10 @@
     <div id="navbar">
         <button id="signin">Sign In</button>
         <button id="signup">Sign Up</button>
-        <button id="log-out">Log out</button>
+        <!-- <button id="log-out">Log out</button> -->
     </div>
 
+    <!--
     <div id="chat-body">
         <input type="text" id="search-user">
         <div id="show-users"></div>
@@ -40,6 +41,7 @@
             </div>
         </div>
     </div>
+    -->
 
     <div id="formularSignIn">
         <h2>Sign in</h2>
