--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,7 @@
     <title>Sign up</title>
     <link rel="stylesheet" href="formular.css">
     <script src="connection.js" defer></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
 </head>
 
 <body>
