--- a/client/chat.html
+++ b/client/chat.html
@@ -19,7 +19,7 @@
                 <input type="text" name="s_group" id="s_group">
                 <div>
                     <b>YourName</b>
-                    <button>
+                    <button title="Search users">
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
                             id="Capa_1" x="0px" y="0px" viewBox="0 0 511.999 511.999"
                             style="enable-background:new 0 0 511.999 511.999;" xml:space="preserve">
@@ -27,7 +27,7 @@
                                 d="M508.874,478.708L360.142,329.976c28.21-34.827,45.191-79.103,45.191-127.309c0-111.75-90.917-202.667-202.667-202.667    S0,90.917,0,202.667s90.917,202.667,202.667,202.667c48.206,0,92.482-16.982,127.309-45.191l148.732,148.732    c4.167,4.165,10.919,4.165,15.086,0l15.081-15.082C513.04,489.627,513.04,482.873,508.874,478.708z M202.667,362.667    c-88.229,0-160-71.771-160-160s71.771-160,160-160s160,71.771,160,160S290.896,362.667,202.667,362.667z" />
                         </svg>
                     </button>
-                    <button>
+                    <button id="btn-logout" title="Log out">
                         <svg xmlns="http://www.w3.org/2000/svg" height="512" viewBox="0 0 512 512">
                             <path
                                 d="m480.971 239.029-90.51-90.509a24 24 0 0 0 -33.942 0 24 24 0 0 0 0 33.941l49.54 49.539h-262.059a24 24 0 0 0 -24 24 24 24 0 0 0 24 24h262.059l-49.54 49.539a24 24 0 0 0 33.942 33.941l90.51-90.51a24 24 0 0 0 0-33.941z" />
@@ -46,7 +46,7 @@
             </div>
             <div id="writeArea">
                 <input type="text" name="write" id="write">
-                <button id="btn-send">
+                <button id="btn-send" title="Send message">
                     <svg viewBox="0 0 16 16">
                         <path
                             d="M0,9l4,1.5L6,16l2.861-3.82L14,14l2-14L0,9z M7.169,11.44l-0.916,2.485l-1.086-3.118l8.402-7.631L7.169,11.44z" />
