Update chat conversations and database functions

--- a/client/chat.html
+++ b/client/chat.html
@@ -14,6 +14,7 @@
     <main>
         <div id="left">
             <div id="contacts">
+                <div id="search_users" style="display: none; position: sticky;"></div>
             </div>
             <div id="menu">
                 <input type="text" name="s_group" id="s_group">
