--- a/client/chat.html
+++ b/client/chat.html
@@ -47,6 +47,17 @@
             </div>
             <div id="writeArea">
                 <input type="text" name="write" id="write">
+                                
+                <input type="file" id="myfile" name="myfile">
+                <button title="Send message" onclick="uploadFile()">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-upload" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M4 17v2a2 2 0 0 0 2 2h12a2 2 0 0 0 2 -2v-2" />
+                        <polyline points="7 9 12 4 17 9" />
+                        <line x1="12" y1="4" x2="12" y2="16" />
+                    </svg>
+                </button>
+
                 <button id="btn-send" title="Send message">
                     <svg viewBox="0 0 16 16">
                         <path
